# moose

./: .gitignore  Cargo.toml  README.md  build.rs  copy_new_version_to_uefi_image.sh  create_uefi_image.sh  limine.cfg  package.bat  package.ps1  package.sh  package_wsl.sh  run.bat  run.ps1
.github/workflows/: ci.yml
common/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: main.rs  vga.rs
crates/kernel/src/arch/: mod.rs
crates/kernel/src/driver/: pci.rs
crates/kernel/src/driver/acpi/: madt.rs  mod.rs
crates/kernel/src/driver/apic/: local_apic.rs  mod.rs
fs/: Cargo.toml
fs/src/: lib.rs
fs/src/fat32/: directory.rs  fat.rs  file.rs  lfn.rs  mod.rs
kernel/: Cargo.toml  limine.cfg  package.ps1  package_wsl.sh  run.ps1  x86_64-moose.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  cpu.rs  kernel.rs  linker.rs  logger.rs  main.rs  memory.rs  process.rs  scheduler.rs  serial.rs
kernel/src/arch/: irq.rs
kernel/src/arch/x86/: gdt.rs  idt.rs  mod.rs
kernel/src/driver/: ata.rs  mod.rs  pic.rs  pit.rs  trampoline.asm
kernel/src/driver/acpi/: acpica.rs  devices.rs  hid.rs  mod.rs  sdt.rs
kernel/src/driver/apic/: io_apic.rs  local_apic.rs  mod.rs
kernel/src/driver/net/: mod.rs
kernel/src/driver/net/nic/: rtl8139.rs
program1/: Cargo.toml
program1/.cargo/: config.toml
program1/src/: main.rs
program2/: Cargo.toml
program2/src/: main.rs
sandbox/src/: main.rs
src/: allocator.rs  cpu.rs  font.rs  kernel.rs  logger.rs  main.rs  memory.rs  serial.rs  terminal.rs  vga.rs
src/arch/: irq.rs  x86.rs
src/arch/x86/: asm.rs  gdt.rs  idt.rs  mod.rs
src/driver/: acpi.rs  apic.rs  ata.rs  keyboard.rs  mod.rs  pci.rs  pit.rs  trampoline.asm
src/driver/acpi/: dsdt.rs  fadt.rs  mod.rs  rsdp.rs
src/driver/apic/: io_apic.rs  local_apic.rs  mod.rs
