[package]
name = "moose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = "0.2.0"
log = "0.4.21"
x86_64 = "0.15.1"
spin = "0.9.8"
pic8259 = "0.11.0"
bitflags = "2.5.0"
snafu = { version = "0.8.2", default-features = false, features = ["rust_1_61", "rust_1_65", "unstable-core-error"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
