[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.2.0"
log = "0.4.21"
x86_64 = "0.15.1"
spin = "0.9.8"
pic8259 = "0.11.0"
bitflags = "2.5.0"
snafu = { version = "0.8.2", default-features = false, features = ["rust_1_61", "rust_1_65", "unstable-core-error"] }
linked_list_allocator = "0.10.5"
deku = { version = "0.16.0", default-features = false, features = ["alloc", "const_generics"] }
raw-cpuid = "11.0.1"
volatile = "0.5.2"
libm = "0.2.8"
aml = "0.16.4"
bitfield-struct = "0.6.1"
bytemuck = "1.16.0"
